external-crates/move/crates/move-compiler/tests/move_2024/typing/macros_visibility_not_checked_called.exp
error[E04001]: restricted visibility
  ┌─ tests/move_2024/typing/macros_visibility_not_checked_called.move:9:9
  │
4 │     public(package) fun package() {}
  │     --------------- A 'public(package)' function can only be called from the same address and package as module 'a::m' in package '<unknown package>'. This call is from address 'b' in package '<unknown package>'
  ·
9 │         package();
  │         ^^^^^^^^^ Invalid call to 'public(package)' visible function 'a::m::package'

error[E04001]: restricted visibility
   ┌─ tests/move_2024/typing/macros_visibility_not_checked_called.move:10:9
   │
 3 │     fun private() {}
   │         ------- This function is internal to its module. Only 'public', 'public(friend)', and 'public(package)' functions can be called outside of their module
   ·
10 │         private();
   │         ^^^^^^^^^ Invalid call to internal function 'a::m::private'

error[E04001]: restricted visibility
   ┌─ tests/move_2024/typing/macros_visibility_not_checked_called.move:14:9
   │
 3 │     fun private() {}
   │         ------- This function is internal to its module. Only 'public', 'public(friend)', and 'public(package)' functions can be called outside of their module
   ·
14 │         private();
   │         ^^^^^^^^^ Invalid call to internal function 'a::m::private'

error[E04001]: restricted visibility
   ┌─ tests/move_2024/typing/macros_visibility_not_checked_called.move:30:9
   │
13 │     public(package) macro fun t1() {
   │     --------------- A 'public(package)' function can only be called from the same address and package as module 'a::m' in package '<unknown package>'. This call is from address 'b' in package '<unknown package>'
   ·
30 │         a::m::t1!();
   │         ^^^^^^^^^^^ Invalid call to 'public(package)' visible function 'a::m::t1'

